--- a/force-app/main/default/classes/AccountHandler.cls
+++ b/force-app/main/default/classes/AccountHandler.cls
@@ -10,6 +10,7 @@ public class AccountHandler {
              counter = counter + 1;
         }
         insert addAccounts;
+        System.debug('testing');
     }
 
 }
