--- a/force-app/main/default/classes/AccountAddressTriggerHandler.cls
+++ b/force-app/main/default/classes/AccountAddressTriggerHandler.cls
@@ -1,4 +1,5 @@
 public class AccountAddressTriggerHandler {
+    //class test
     public static void beforeinsertrecords(list<Account>acclist){
         if(!acclist.isEmpty()){
             for(Account alist:acclist){
