--- a/force-app/main/default/classes/AccountAddressTriggerHandler.cls
+++ b/force-app/main/default/classes/AccountAddressTriggerHandler.cls
@@ -1,5 +1,5 @@
 public class AccountAddressTriggerHandler {
-    //test S
+    //test Sameer
     public static void beforeinsertrecords(list<Account>acclist){
         if(!acclist.isEmpty()){
             for(Account alist:acclist){
