--- a/force-app/main/default/classes/AccountCalculator.cls
+++ b/force-app/main/default/classes/AccountCalculator.cls
@@ -11,6 +11,7 @@ public class AccountCalculator {
         if(!accList.isEmpty()){
             update accList ;
         }
+        system.debug('size of account update ');
     }
 
 }
