--- a/force-app/main/default/classes/AccountAddressTriggerHandler.cls
+++ b/force-app/main/default/classes/AccountAddressTriggerHandler.cls
@@ -1,13 +1,13 @@
 public class AccountAddressTriggerHandler {
     //class test
-
+//test again with me
     //test Sameer
     public static void beforeinsertrecords(list<Account>acclist){
         if(!acclist.isEmpty()){
             for(Account alist:acclist){
                 if(alist.Match_Billing_Address__c == true){
                     alist.ShippingPostalCode = alist.BillingPostalCode;
-                    System.debug('test');
+                    System.debug('test again');
                 }
             }
         }
