--- a/force-app/main/default/classes/AccountCalculator.cls
+++ b/force-app/main/default/classes/AccountCalculator.cls
@@ -1,4 +1,4 @@
-// TEST_CLASS: AccountCalculatorTest
+// TEST_CLASS: AccountCalculatorTest, AccountManagerTest
 public class AccountCalculator {
     @future
     public static void countContact(List<Id> accIds){
