--- a/force-app/main/default/classes/AccountCalculator.cls
+++ b/force-app/main/default/classes/AccountCalculator.cls
@@ -1,5 +1,5 @@
+// TEST_CLASS: AccountCalculatorTest, AccountManagerTest
 public class AccountCalculator {
-//testing
     @future
     public static void countContact(List<Id> accIds){
         List<Account> accList = [Select Id,(SELECT Id from Contacts) From Account WHERE Id IN: accIds];
