--- a/force-app/main/default/classes/AccountCalculator.cls
+++ b/force-app/main/default/classes/AccountCalculator.cls
@@ -1,6 +1,6 @@
-// TEST_CLASS: AccountManagerTest
+// TEST_CLASS: AccountCalculatorTest, AccountManagerTest
 public class AccountCalculator {
-    @future
+    // @future
     public static void countContact(List<Id> accIds){
         List<Account> accList = [Select Id,(SELECT Id from Contacts) From Account WHERE Id IN: accIds];
         
